WIP: Fixed: Added /machines/getMachines Swagger definition.
